--- a/asset/css/css.loading.css
+++ b/asset/css/css.loading.css
@@ -1,3 +1,4 @@
+<style>
 #preloader {
 position: fixed;
 top: 0;
@@ -93,3 +94,4 @@ to{ bottom:0; opacity:1 }
 display: none;
 }
 p {text-indent: 2em}
+</style>
