--- a/asset/css/css.loading.css
+++ b/asset/css/css.loading.css
@@ -100,7 +100,7 @@
     top: 0;
     width: 51%;
     height: 100%;
-    background: #1abc9c;/*背景色 原#1abc9c */
+    background: #F2F2F2;/*背景色 原#1abc9c */
     z-index: 1000;
     -webkit-transform: translateX(0);
     -ms-transform: translateX(0);
