--- a/asset/css/css3.loading.css
+++ b/asset/css/css3.loading.css
@@ -157,7 +157,7 @@
  
 #loader-wrapper #load_title {
     font-family: 'Open Sans';
-    color: #FFF;
+    color: #000;
     font-size: 19px;
     width: 100%;
     text-align: center;
